--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -13,6 +13,18 @@
 .pop-btns .pop-btn:hover {box-shadow:0px 3px 6px rgba(0,0,0,0.16);}
 .pop-btns .pop-btn:first-child {flex:1; margin-left:0px; background-color:#039EA1;}
 
+.input-wrap {margin-top:15px;}
+.input-wrap:first-child {margin-top:0;}
+.input {border:1px solid #e1e1e1; border-radius:5px;}
+.input input {width:100%; padding:0 15px; line-height:35px; height:35px;}
+
+.input-checkbox input {display:none;}
+.input-checkbox label {padding:6px 0; padding-left:50px; position:relative; cursor:pointer;}
+.input-checkbox label:before {display:block; content:""; width:35px; height:35px; position:absolute; left:0; top:0; border:2px solid #e1e1e1; border-radius:5px;}
+.input-checkbox input:checked + label:after {display:block; content:""; width:10px; height:10px; position:absolute; left:15px; top:15px; background-color:#00CD3C; }
+.input-checkbox input:checked + label:before {border-color:#00CD3C;}
+
+
 @media screen and (max-width:1200px){
     .wrap-1200 {width:100%; padding:0 20px;}
 }
