--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -4,6 +4,10 @@
 .bg-sub {background-color:#039EA1}
 .bg-gray {background-color:#999 !important;}
 
+.primary {color:#00CD3C;}
+
+.border-primary {border-color:#00CD3C !important;}
+
 .black {width:100%; height:100%; position:fixed; top:0; left:0; background-color: rgba(0,0,0,0.3); z-index:3;}
 
 .pop {width:300px; padding:20px 30px; position:fixed; top:50%; left:50%; transform: translate(-50%, -50%); background-color:#fff; z-index:4; box-shadow:0px 3px 6px rgba(0,0,0,0.16);}
@@ -20,8 +24,10 @@
 
 .input-wrap {margin-top:15px;}
 .input-wrap:first-child {margin-top:0;}
-.input {border:1px solid #e1e1e1; border-radius:5px;}
+.input {border:1px solid #e1e1e1; border-radius:5px; overflow:hidden;}
 .input input {width:100%; padding:0 15px; line-height:35px; height:35px;}
+.input-select select {width:100%; height:35px; padding:0 15px;}
+.input-textarea textarea {display:block; padding:10px 15px; width:100%;}
 
 .input-checkbox input {display:none;}
 .input-checkbox label {padding:6px 0; padding-left:50px; position:relative; cursor:pointer;}
