--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -35,6 +35,9 @@
 .input-checkbox input:checked + label:after {display:block; content:""; width:10px; height:10px; position:absolute; left:15px; top:15px; background-color:#00CD3C; }
 .input-checkbox input:checked + label:before {border-color:#00CD3C;}
 
+.input-search {position:relative; border:3px solid #00CD3C; background-color:#fff;}
+.input-search input {display:block; padding:7px 20px; padding-right:50px; width:100%;}
+.input-search img {position:absolute; right:20px; top:50%; transform:translateY(-50%);}
 
 @media screen and (max-width:1200px){
     .wrap-1200 {width:100%; padding:0 20px;}
